learning justify content

--- a/Learning CSS/flexbox.html
+++ b/Learning CSS/flexbox.html
@@ -15,6 +15,7 @@
             border: 3px solid  black;
             margin-right: 5px;
             margin: 6px;
+            justify-content: space-around;
             
         }
         #heading {text-align: center;}
