--- a/Learning CSS/animation.html
+++ b/Learning CSS/animation.html
@@ -9,10 +9,15 @@
            background-color: yellow;
            border: 2px solid black;
            border-radius: 5px;
+
+           transition-property: all;
+           transition-duration: 1s;
+           transition-timing-function: linear;
+           transition-delay: 0s;
         }
         .pseudo:hover {
             background-color: rgb(236, 155, 5);
-            color: white;
+            /* color: white; */
             cursor: pointer;
         }
         .pseudo:active{
